Bug 1076810 - RelEng CI tests should be available over the internet, not just from VPN; enable coverage reports and other minor tweaks,r=rail

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist=True
 basepython = python2.7
 
 setenv =
-    PYTHONPATH = {toxinidir}/..:{toxworkdir}/tools/lib/python:{toxworkdir}/buildbot/master
+    PYTHONPATH = {toxworkdir}:{toxworkdir}/tools/lib/python:{toxworkdir}/buildbot/master
 
 deps =
     MySQL-python==1.2.3
@@ -14,6 +14,7 @@ deps =
     Jinja2==2.5.5
     Twisted==10.2.0
     argparse==1.1
+    coverage==3.7.1
     distribute==0.6.14
     mock==1.0.1
     pyOpenSSL==0.14
@@ -25,4 +26,10 @@ deps =
 
 commands =
     ./tox_env.sh "{toxworkdir}"
-    trial --reporter=verbose buildbotcustom.test
+    coverage run '--omit=.tox/*' --branch "{toxworkdir}/py27/bin/trial" --reporter=verbose buildbotcustom.test
+
+[testenv:py27-coveralls]
+deps=
+    python-coveralls==2.4.3
+commands=
+    coveralls
