--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,8 @@ notifications:
   irc: "irc.mozilla.org#releng"
   on_success: always
   on_failure: always
+  template:
+    - "%{repository}#%{build_number} (%{branch} - %{commit} : %{author}): %{message}"
+    - "Change view : %{compare_url}"
+    - "Build details : %{build_url}"
+    - "Commit message : %{commit_message}"
