No Bug - Fix travis. r=dustin over IRC

--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,6 @@ deps =
     Twisted==10.2.0
     argparse==1.1
     coverage==3.7.1
-    distribute==0.6.14
     mock==1.0.1
     pyOpenSSL==0.14
     pyasn1==0.0.11a
@@ -23,6 +22,10 @@ deps =
     service-identity==14.0.0
     wsgiref==0.1.2
     zope.interface==3.6.1
+    # Can't install distribute with pip>=6.0,<=6.0.3
+    # See https://github.com/pypa/pip/issues/2290
+    # Re-Add once pip 6.0.4 is back
+    #distribute==0.6.14
 
 commands =
     ./tox_env.sh "{toxworkdir}"
